<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--        <ImageView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="0dp"-->
    <!--            android:layout_weight="2"-->
    <!--            android:src="@drawable/icon"-->
    <!--            tools:ignore="ContentDescription" />-->

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/mainTitle"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/main_pass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/bg_main_button"
        android:onClick="mainOnClick"
        android:padding="5dp"
        android:text="@string/pass"
        android:textColor="#fff" />

    <Button
        android:id="@+id/main_convertation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:background="@drawable/bg_main_button"
        android:onClick="mainOnClick"
        android:padding="5dp"
        android:text="@string/unitConversion"
        android:textColor="#fff" />

    <Button
        android:id="@+id/main_flashlight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:background="@drawable/bg_main_button"
        android:onClick="mainOnClick"
        android:padding="5dp"
        android:text="@string/flashLight"
        android:textColor="#fff" />

    <Button
        android:id="@+id/main_timer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:background="@drawable/bg_main_button"
        android:onClick="mainOnClick"
        android:padding="5dp"
        android:text="@string/timer"
        android:textColor="#fff" />

    <Button
        android:id="@+id/main_calculator"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:layout_weight="1"
        android:background="@drawable/bg_main_button"
        android:onClick="mainOnClick"
        android:padding="5dp"
        android:text="@string/calculator"
        android:textColor="#fff" />

    <Button
        android:id="@+id/main_exit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/bg_main_button"
        android:onClick="mainOnClick"
        android:padding="5dp"
        android:text="@string/exit"
        android:textColor="#fff" />

</LinearLayout>
