<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TimerActivity">

    <TextView
        android:id="@+id/timer_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:maxLines="1"
        android:padding="15dp"
        android:text="@string/timerStartTime"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="75sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/timer_play"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/timer_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/bg_main_button"
        android:padding="10dp"
        android:text="@string/timerPlay"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@id/timer_stop" />

    <Button
        android:id="@+id/timer_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/bg_main_button"
        android:padding="10dp"
        android:text="@string/timerStop"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@id/timer_start" />

    <Button
        android:id="@+id/timer_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:background="@drawable/bg_main_button"
        android:padding="10dp"
        android:text="@string/timerStart"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>