<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEditPassActivity">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/add_edit_pass_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="22sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/add_edit_pass_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/appNameHint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/add_edit_pass_coor"
        tools:ignore="LabelFor" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/add_edit_pass_coor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/add_edit_pass_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:gravity="center"
            android:hint="@string/passHint"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:textAlignment="center" />

        <ToggleButton
            android:id="@+id/pass_visible"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center|right"
            android:layout_marginRight="15dp"
            android:background="@drawable/visible_toggle_selector"
            android:textOff=""
            android:textOn=""
            tools:ignore="RtlHardcoded" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <Button
        android:id="@+id/add_edit_pass_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/bg_main_button"
        android:text="@string/confirm"
        android:textColor="@color/textColor"
        app:layout_constraintTop_toBottomOf="@id/add_edit_pass_coor" />

</androidx.constraintlayout.widget.ConstraintLayout>